@startuml

title __DOMAIN's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.common.domain {
    class pt.ulisboa.tecnico.surespace.common.domain.Entity {
        {static} + PATH_PREFIX : String
        - descriptiveUId : String
        - name : String
        - path : String
        {static} - serialVersionUID : long
        - type : String
        + Entity()
        + clone()
        + equals()
        + getDescriptiveUId()
        + getName()
        + getPath()
        + getType()
        + hashCode()
        + toString()
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.common.domain {
    class pt.ulisboa.tecnico.surespace.common.domain.Nonce {
        {static} - serialVersionUID : long
        - value : long
        + Nonce()
        + clone()
        + equals()
        + getValue()
        + hashCode()
        + toString()
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.common.domain {
    abstract class pt.ulisboa.tecnico.surespace.common.domain.Object {
        {static} - serialVersionUID : long
        + asString()
        {abstract} + clone()
        {abstract} + equals()
        {static} + fromBytes()
        + getBytes()
        {abstract} + hashCode()
        {abstract} + toString()
        # Object()
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.common.domain {
    class pt.ulisboa.tecnico.surespace.common.domain.TimeInterval {
        {static} - serialVersionUID : long
        + TimeInterval()
        + TimeInterval()
        + clone()
        + equals()
        + getNotAfter()
        + getNotBefore()
        + hashCode()
        + isValid()
        + isValid()
        + toString()
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.common.domain {
    class pt.ulisboa.tecnico.surespace.common.domain.Timestamp {
        - instant : Instant
        {static} - serialVersionUID : long
        + Timestamp()
        + Timestamp()
        + clone()
        + equals()
        + hashCode()
        + isAfter()
        + isBefore()
        + setInstant()
        + toDate()
        + toInstant()
        + toLocalDate()
        + toLocalDateTime()
        + toString()
    }
  }
  

  pt.ulisboa.tecnico.surespace.common.domain.Entity -up-|> pt.ulisboa.tecnico.surespace.common.domain.Object
  pt.ulisboa.tecnico.surespace.common.domain.Nonce -up-|> pt.ulisboa.tecnico.surespace.common.domain.Object
  pt.ulisboa.tecnico.surespace.common.domain.Object .up.|> java.io.Serializable
  pt.ulisboa.tecnico.surespace.common.domain.Object .up.|> java.lang.Cloneable
  pt.ulisboa.tecnico.surespace.common.domain.TimeInterval -up-|> pt.ulisboa.tecnico.surespace.common.domain.Object
  pt.ulisboa.tecnico.surespace.common.domain.TimeInterval o-- pt.ulisboa.tecnico.surespace.common.domain.Timestamp : notAfter
  pt.ulisboa.tecnico.surespace.common.domain.TimeInterval o-- pt.ulisboa.tecnico.surespace.common.domain.Timestamp : notBefore
  pt.ulisboa.tecnico.surespace.common.domain.Timestamp -up-|> pt.ulisboa.tecnico.surespace.common.domain.Object


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
